# SistemaSEAPAC

./: README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: deploy-cloud.yml  deploy.yml  lint.yml
compose/django/: Dockerfile  entrypoint  start
compose/nginx/: default.conf
core/: settings.py  urls.py
docs/: Documento de Requisitos.md
seapac/: admin.py  apps.py  forms.py  models.py  signals.py  validators.py  views.py
seapac/fixtures/: dados_iniciais.json
seapac/migrations/: 0001_initial.py  0002_destino_entrada.py  0003_delete_destino_delete_entrada.py  0004_timelineevent.py  0005_rename_data_evento_timelineevent_data.py  0006_evento_confirmado_evento_familia.py  0007_alter_evento_familia.py  0008_delete_user.py  0009_subsystem_descricao.py  0010_subsystem_foto_perfil.py  0011_rename_foto_perfil_subsystem_foto_subsistema.py  0012_subsystem_tipo.py  0013_alter_subsystem_tipo.py  0014_remove_family_terra_family_municipio_delete_terrain.py  0015_project_status.py  0016_family_renda_alter_project_nome_projeto.py  0017_remove_family_projeto_family_projetos.py  0018_alter_subsystem_tipo.py  0019_alter_project_status.py  0020_technician_especialidade_and_more.py  0021_remove_technician_descricao.py  0022_evento_data_alter_evento_inicio_and_more.py  0023_remove_evento_inicio_alter_evento_data.py  0024_alter_project_status.py
seapac/reports/: graficos.py  pdf.py
staticfiles/css/: dashboard.css  homepage.css  recuperacao.css
templates/: base.html
usuarios/: admin.py  forms.py  models.py  urls.py  views.py
(+47 files in other folders)
