[metadata]
name = AVF
version = 0.1.0
description = Sistema de monitoramento de transição agroecológica
author = Ana Maria, Felipe Raposo

[options]
packages = find:
include_package_data = True
zip_safe = False

[options.packages.find]
include =
    core*
    usuarios*
    seapac*
    staticfiles*
    templates*
    
exclude =
    venv*
    media*
    docs*
    compose*

[flake8]
exclude =
    venv,
    media,
    docs,
    compose